chore: in process of refactoring - gameplay redis state blob
